# MA4825---Robotics

./: Notes  Potentiometer_23-09.ino  README.md
STL files/: Central Level^Dummy v2.STL  Cradle Base^Dummy v2.STL  Forearm Lever^Dummy v2.STL  LH Central Level^Dummy v2.STL  RH Side^Dummy v2.STL  Rectangular Side Part^Dummy v2.STL  Triangle Bit^Dummy v2.STL
read_potentiometer/: read_potentiometer.ino
robotics_controller/: CMakeLists.txt  package.xml
robotics_controller/launch/: controller_manager.launch  start_meta_controller.launch  start_tilt_controller.launch  view_robot.launch
robotics_controller/meshes/: AX12.STL  Gripper 2^Dummy v2.STL  Gripper Arm 2^Dummy v2.STL  Gripper Arm ^Dummy v2.STL  Gripper Base^Dummy v2.STL  Gripper Link 2^Dummy v2.STL  Gripper^Dummy v2.STL  Servo Mounting Arm^Dummy v2.STL  The Pig^Dummy v2.STL  forearm_lever.STL  gripper_link.STL  gripper_servo_holder.STL  long_lever.STL  servo_mounting_arm.STL  straight_lever.STL
robotics_controller/msg/: Potentiometer.msg  Task.msg  Trajectory.msg
robotics_controller/params/: joints_trajectory_controller.yaml  tilt (copy).yaml  tilt.yaml  tilt_2.yaml
robotics_controller/rviz_params/: view_arm.rviz
robotics_controller/scripts/: .servo_controller.py.swp  moveArm.py  selectTask.py  servo_controller.py  servo_controller.py.save  servo_potentiometer.py  servo_response.py  store_trajectories.py  test.py
robotics_controller/srv/: move_arm.srv
robotics_controller/urdf/: arm.urdf  arm_v2.urdf  frames.gv  random.urdf
store_trajectory/: store_trajectory.ino
